--- a/biome.json
+++ b/biome.json
@@ -36,6 +36,10 @@
         "noVar": "error",
         "noInferrableTypes": "off",
         "noUselessElse": "off"
+      },
+      "correctness": {
+        "noUnusedImports": "error",
+        "noUnusedVariables": "error"
       }
     }
   },
