--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "typescript": "^5.7.2"
   },
   "_moduleAliases": {
-    "types": "./dist/src/types",
-    "modules": "./dist/src/modules"
+    "types": "./dist/types",
+    "modules": "./dist/modules"
   }
 }
