fix: remove publish script from package.json

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "types": "./dist/index.d.ts",
   "files": ["dist"],
   "scripts": {
-    "build": "tsup",
-    "publish": "npm run build && npm publish"
+    "build": "tsup"
   },
   "repository": {
     "type": "git",
