--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   check:
     name: Check commit message
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     outputs:
       commit_message: ${{ steps.check_commit_message.outputs.commit_message }}
 
