--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/Lazco-Studio/VirtFusion/wiki",
   "packageManager": "pnpm@9.14.4",
   "dependencies": {
+    "@swc/core": "^1.10.1",
     "@types/lodash": "^4.17.13",
     "@types/tcp-ping": "^0.1.6",
     "axios": "^1.7.9",
