--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "virtfusion",
-  "version": "0.3.9",
+  "version": "0.4.0",
   "description": "A client for VirtFusion API. Built with TypeScript.",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsup"
   },
@@ -13,7 +15,13 @@
     "type": "git",
     "url": "git+https://github.com/Lazco-Studio/VirtFusion.git"
   },
-  "keywords": ["VirtFusion", "api", "typescript", "async", "promise"],
+  "keywords": [
+    "VirtFusion",
+    "api",
+    "typescript",
+    "async",
+    "promise"
+  ],
   "author": "Alex Liao, Lazco Studio LTD.",
   "license": "GPL-3.0",
   "bugs": {
