--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup"
+    "build": "tsup",
+    "setup-dev": "git clone git@github.com:Lazco-Studio/VirtFusion-Test.git ../VirtFusion-Test"
   },
   "repository": {
     "type": "git",
